update with theias things

--- a/themes/theias/assets/sass/_base.scss
+++ b/themes/theias/assets/sass/_base.scss
@@ -29,6 +29,11 @@ body {
     min-height: 100vh;
 }
 
+h1 {
+    text-transform: uppercase;
+    margin-bottom: 3rem;
+}
+
 $bp-largest: 75em; // 1200px
 $bp-large: 68.75em; // 1100px
 $bp-medium: 56.25em; // 900px
