--- a/themes/theias/layouts/partials/_about.html
+++ b/themes/theias/layouts/partials/_about.html
@@ -1,5 +1,6 @@
 <div class="container" id="about">
-    <div class="about">
+    <img class="about__img" src="img/about.jpg" alt="about_picture">
+    <div class="about__text">
         <h1 class="about__title">Sobre</h1>
         <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros, 
@@ -13,6 +14,6 @@ faucibus libero, at maximus nisl suscipit posuere. Morbi nec enim nunc.
 Phasellus bibendum turpis ut ipsum egestas, sed sollicitudin elit convallis. 
 Cras pharetra mi tristique sapien vestibulum lobortis. Nam eget bibendum metus, 
 non dictum mauris. Nulla at tellus sagittis, viverra est a, bibendum metus.
-    </p>
+        </p>
     </div>
 </div>
