--- a/themes/theias/layouts/partials/_contacts.html
+++ b/themes/theias/layouts/partials/_contacts.html
@@ -1,5 +1,6 @@
 <div class="container" id="contacts">
     <div class="contacts">
         <h1 class="contacts__title">Contactos</h1>
+        <img class="contacts__img" src="img/contacts.png" alt="contacts_picture">
     </div>
 </div>
