--- a/themes/theias/layouts/partials/_portfolio.html
+++ b/themes/theias/layouts/partials/_portfolio.html
@@ -3,28 +3,28 @@
         <h1 class="portfolio__title">Portfolio</h1>
         <div class="portfolio__cards">
             <div class="portfolio__card">
-                <img class="portfolio__card__img" src="img/toadking.jpg" alt="toadking">
+                <img class="portfolio__card__img" src="img/art1.jpg" alt="art1">
             </div>
             <div class="portfolio__card">
-                <img class="portfolio__card__img" src="img/vaca.jpeg" alt="vaca">
+                <img class="portfolio__card__img" src="img/art2.jpg" alt="art2">
             </div>
             <div class="portfolio__card">
-                <img class="portfolio__card__img" src="img/picasso.jpg" alt="picasso">
+                <img class="portfolio__card__img" src="img/art3.jpg" alt="art3">
             </div>
             <div class="portfolio__card">
-                <img class="portfolio__card__img" src="img/grito.jpeg" alt="grito">
+                <img class="portfolio__card__img" src="img/art4.jpg" alt="art4">
             </div>
             <div class="portfolio__card">
-                <img class="portfolio__card__img" src="img/toadking.jpg" alt="toadking">
+                <img class="portfolio__card__img" src="img/art5.jpg" alt="art5">
             </div>
             <div class="portfolio__card">
-                <img class="portfolio__card__img" src="img/vaca.jpeg" alt="vaca">
+                <img class="portfolio__card__img" src="img/art6.jpg" alt="art6">
             </div>
             <div class="portfolio__card">
-                <img class="portfolio__card__img" src="img/picasso.jpg" alt="picasso">
+                <img class="portfolio__card__img" src="img/art7.jpg" alt="art7">
             </div>
             <div class="portfolio__card">
-                <img class="portfolio__card__img" src="img/grito.jpeg" alt="grito">
+                <img class="portfolio__card__img" src="img/art8.jpg" alt="art8">
             </div>
         </div>
     </div>
