--- a/themes/theias/assets/sass/components/_portfolio.scss
+++ b/themes/theias/assets/sass/components/_portfolio.scss
@@ -10,6 +10,7 @@
         width: 30rem;
         height: 30rem;
         overflow: hidden;
+        margin: 0.2rem;
 
         & img {
             object-fit: cover;
