--- a/themes/theias/layouts/partials/_contacts.html
+++ b/themes/theias/layouts/partials/_contacts.html
@@ -1,6 +1,19 @@
 <div class="container" id="contacts">
     <div class="contacts">
         <h1 class="contacts__title">Contactos</h1>
+        <div class="social">
+            <div class="social__icon">
+                <a href="#" target="_blank" rel="noreferrer">
+                    <i class="fas fa-envelope-square" title="Email" aria-label="Go to Email"></i>
+                </a>
+                <a href="#" target="_blank" rel="noreferrer">
+                    <i class="fab fa-instagram" title="Instagram" aria-label="Go to Instagram"></i>
+                </a>
+                <a href="#" target="_blank" rel="noreferrer">
+                    <i class="fab fa-linkedin" title="LinkedIn" aria-label="Go to LinkedIn"></i>
+                </a>
+            </div>
+        </div>
         <img class="contacts__img" src="img/contacts.png" alt="contacts_picture">
     </div>
 </div>
