--- a/themes/theias/layouts/partials/_portfolio.html
+++ b/themes/theias/layouts/partials/_portfolio.html
@@ -26,6 +26,9 @@
             <div class="portfolio__card">
                 <img class="portfolio__card__img" src="img/art8.jpg" alt="art8">
             </div>
+            <div class="portfolio__card">
+                <img class="portfolio__card__img" src="img/art9.jpg" alt="art9">
+            </div>
         </div>
     </div>
 </div>
