--- a/themes/theias/assets/sass/_layout.scss
+++ b/themes/theias/assets/sass/_layout.scss
@@ -23,3 +23,11 @@
         border-bottom: 0.2rem solid $color-background-dark;
     }
 }
+
+
+@media only screen and (max-width: $bp-small) {
+
+    .container{
+        padding: 4rem;
+    }
+}  
