--- a/themes/theias/layouts/partials/header.html
+++ b/themes/theias/layouts/partials/header.html
@@ -1,6 +1,8 @@
 <div class="container" id="header">
     <div class="header">
-        <h1 class="header__title">Afonso Theias</h1>
+        <div class="header__title">
+            <h1>Afonso Theias</h1>
+        </div>
         <img class="header__img" src="img/header.png" alt="header_picture">
     </div>
 </div>
