--- a/themes/theias/layouts/partials/_portfolio.html
+++ b/themes/theias/layouts/partials/_portfolio.html
@@ -1,7 +1,7 @@
 <div class="container" id="portfolio">
     <div class="portfolio">
         <h1 class="portfolio__title">Portfolio</h1>
-        <div class="portfolio__cards">
+        <div class="portfolio__cards" id="portfolio-container">
             <div class="portfolio__card">
                 <img class="portfolio__card__img" src="img/art1.jpg" alt="art1">
             </div>
