--- a/themes/theias/layouts/partials/_contacts.html
+++ b/themes/theias/layouts/partials/_contacts.html
@@ -1,6 +1,10 @@
 <div class="container" id="contacts">
     <div class="contacts">
         <h1 class="contacts__title">Contactos</h1>
+        <p class="contacts__text">Afonso Theias: Artista, Tatuador, Parvo</p>
+        <p class="contacts__text">Lisboa, Portugal</p>
+        <p class="contacts__text">+351 912345678</p>
+        <p class="contacts__text">afonso@theias.com</p>
         <div class="social">
             <div class="social__icon">
                 <a href="#" target="_blank" rel="noreferrer">
@@ -14,6 +18,6 @@
                 </a>
             </div>
         </div>
-        <img class="contacts__img" src="img/contacts.png" alt="contacts_picture">
     </div>
+    <img class="contacts__img" src="img/contacts.png" alt="contacts_picture">
 </div>
