--- a/themes/theias/layouts/partials/header.html
+++ b/themes/theias/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <div class="container" id="header">
     <div class="header">
         <div class="header__title">
-            <h1>Afonso Theias</h1>
+            <h1>{{.Site.Data.texts.title}}</h1>
         </div>
         <img class="header__img" src="img/header.png" alt="header_picture">
     </div>
