--- a/themes/theias/layouts/partials/_about.html
+++ b/themes/theias/layouts/partials/_about.html
@@ -1,8 +1,8 @@
 <div class="container" id="about">
     <div class="about">
         <div class="about__text">
-            <h1 class="about__title">{{.Site.Data.texts.about.title}}</h1>
-            <p>{{.Site.Data.texts.about.text}} /p>
+            <h1 class="about__title">{{.Site.Data.content.about.title}}</h1>
+            <p>{{.Site.Data.content.about.text}} /p>
         </div>
         <img class="about__img" src="img/about.jpg" alt="about_picture">
         </div>
