--- a/themes/theias/assets/sass/components/_portfolio.scss
+++ b/themes/theias/assets/sass/components/_portfolio.scss
@@ -9,6 +9,7 @@
     }
 
     &__card {
+        position: relative;
         min-width: 15rem;
         max-width: 80rem;
         height: 30rem;
@@ -24,6 +25,33 @@
 
             &:hover {
                 opacity: 0.8;
+            }
+        }
+
+        &__description {
+            z-index: 999;
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            opacity: 0;
+            transition: all 0.7s ease-in-out;
+            color: white;
+            background-color: rgba($color-background-text, 0.5);
+            padding: 1rem 1.5rem;
+            text-align:center;
+
+            & p {
+                background-color: rgba($color-background-text, 0.9);
+                padding: 0.5rem 1rem;
+                border-radius: 0.2rem;
+            }
+
+            &:hover {
+                opacity: 1;
             }
         }
     }
