--- a/themes/theias/assets/sass/components/_contacts.scss
+++ b/themes/theias/assets/sass/components/_contacts.scss
@@ -1,12 +1,27 @@
 .contacts {
-    width: 40%;
-    text-align: center;
+
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &__text {
+        margin: 2rem;
+        text-align: center;
+    }
 
     &__img {
         mix-blend-mode: darken;
-        width: 30rem;
+        max-width: 40rem;
+        margin: 2rem;
     }
 }
+
+@media only screen and (max-width: $bp-small) {
+    .contacts {
+        flex-direction: column;
+    }
+}  
 
 .social {
 
@@ -16,7 +31,7 @@
         height: 4rem;
         width: 4rem;
         color: black;
-        padding: 0.7rem;
+        padding: 0.4rem;
         display: inline;
 
         & a {
